<project name="ScalaTest" default="dist" basedir=".">

    <!-- set global properties for this build -->
    <property name="src" value="src" />
    <property name="tests" value="tests" />
    <property name="build" value="target" />
    <property name="jar.contents" value="${build}/jar_contents" />
    <!-- classes go in jar.contents. redundant, but makes the rest of build.xml easier to read -->
    <property name="classes" value="${jar.contents}" />
    <property name="generators" value="generators" />
    <property name="build.generated.src" value="${build}/generated/src" />
    <property name="build.generated.tests" value="${build}/generated/tests" />
    <property name="build.tests" value="${build}/tests" />
    <property name="build.tests.jar" value="${build}/tests.jar" />
    <property name="build.generators" value="${build}/generators" />
    <property name="build.coverage" value="${build}/coverage" />
    <property name="dist" value="${build}/dist" />
    <property name="instrumented" value="${build}/instrumented" />
    <property name="doc" value="${build}/doc" />
    <property name="jdoc" value="${build}/jdoc" />
    <property name="zipper" value="zipper" />
    <property name="project.name" value="ScalaTest" />
    <property name="release" value="0.9.6" />
    <property name="demo" value="${build}/demo" />
    <property name="demodoc" value="${demo}/example/javadoc" />
    <property name="example" value="${demo}/example" />
    <property name="lib" value="lib" />
    <property name="jvmargs" value="-Xmx1280M"/>

    <!--
  <property name="build.compiler" value="jikes"/>
  -->

    <target name="init">
        <!-- Create the time stamp -->
        <tstamp />
        <!-- Create the build directory structure used by compile -->
        <mkdir dir="${jar.contents}" />
        <mkdir dir="${build.tests}" />
        <mkdir dir="${build.generators}" />
        <mkdir dir="${build.generated.src}" />
        <mkdir dir="${build.generated.tests}" />
        <mkdir dir="${dist}" />
        <mkdir dir="${demodoc}" />
        <mkdir dir="${doc}" />
        <mkdir dir="${jdoc}" />
        <mkdir dir="${jdoc}" />

        <path id="lib.path">
            <fileset dir="${lib}"><include name="**/*.jar" /></fileset>
        </path>        
        
        <path id="build.class.path">
            <pathelement location="${classes}" />
            <path refid="lib.path"></path>
        </path>

        <!-- this is the class path used to run ScalaTest to test itself, in the "test" target -->
        <path id="test.class.path">
            <pathelement location="${classes}" />
            <path refid="lib.path"></path>
        </path>
        
        <path id="coverage.class.path">
            <pathelement location="${instrumented}" />
            <pathelement location="${classes}" />
            <path refid="lib.path"></path>
        </path>
     
        <path id="build.test.class.path">
            <pathelement location="${classes}" />
            <pathelement location="${build.tests}" />
            <path refid="lib.path"></path>
        </path>

        <path id="build.generators.class.path">
            <pathelement location="${lib}/stringtemplate.jar" />
            <pathelement location="${lib}/scala-library.jar" />
        </path>

        <path id="run.generators.class.path">
            <pathelement location="${build.generators}" />
            <pathelement location="${lib}/scala-library.jar" />
            <pathelement location="${lib}/stringtemplate.jar" />
            <pathelement location="${lib}/antlr-2.7.7.jar" />
        </path>

        <taskdef resource="scala/tools/ant/antlib.xml">
            <classpath>
                <pathelement location="${lib}/scala-compiler.jar" />
                <pathelement location="${lib}/scala-library.jar" />
            </classpath>
        </taskdef>

        <path id="scaladoc.source.path">
            <pathelement location="${src}" />
            <pathelement location="${build.generated.src}" />
        </path>

        <path id="cobertura.class.path">
          <pathelement location="${lib}/cobertura.jar" />
          <pathelement location="${lib}/asm-3.0.jar" />
          <pathelement location="${lib}/asm-tree-3.0.jar" />
          <pathelement location="${lib}/jakarta-oro-2.0.8.jar" />
          <pathelement location="${lib}/log4j-1.2.9.jar" />
        </path>

    </target>

    <target name="taskdefscalatest">
        <taskdef name="scalatest" classname="org.scalatest.tools.ScalaTestTask">
            <classpath>
                <pathelement location="${classes}" />
                <pathelement location="${lib}/scala-library.jar" />
                <pathelement location="${lib}/junit-4.4.jar" />
                <pathelement location="${lib}/ScalaCheck-1.5.jar" />
                <pathelement location="${lib}/mockito-all-1.6.jar" />
                <pathelement location="${lib}/testng-5.7-jdk15.jar" />
                <pathelement location="${lib}/jmock-2.4.0.jar" />
                <pathelement location="${lib}/hamcrest-all-1.1.jar" />
                <pathelement location="${lib}/commons-io-1.3.2.jar" />
            </classpath>
        </taskdef>
    </target>

    <target name="clean" depends="init">
        <delete dir="${build}" />
        <delete dir="test-output" quiet="true" />
    </target>

    <target name="gencode" depends="init">
        <!-- First, compile the code generator from ${generators} into ${build.generators} -->
        <scalac srcdir="${generators}" destdir="${build.generators}" target="jvm-1.5" classpathref="build.generators.class.path" />
        <!-- Then, run it. -->
        <java classname="GenMustMatchers" classpathref="run.generators.class.path" fork="false" />
        <java classname="GenMustMatchersTests" classpathref="run.generators.class.path" fork="false" />
    </target>

    <target name="compile" depends="compile-main, compile-tests"/>

    <target name="compile-main" depends="init">

        <!-- Compile the Scala code from ${src} into ${classes}. Scalac will parse the referenced .java files. -->
        <scalac srcdir="${src}" destdir="${classes}" target="jvm-1.5" classpathref="build.class.path" />

        <!-- Compile the Scala code from ${build.generated.src} into ${classes}. Scalac will parse any referenced .java files. -->
        <scalac srcdir="${build.generated.src}" destdir="${classes}" target="jvm-1.5" classpathref="build.class.path" />

        <!-- Compile the Java code from ${src} into ${classes} -->
        <javac srcdir="${src}" destdir="${classes}" classpathref="build.class.path" debug="yes">
            <include name="org/scalatest/Ignore.java" />
            <include name="org/scalatest/tools/ScalaTestTask.java" />
        </javac>
    </target>

    <target name="compile-tests" depends="compile-main">

        <!-- Compile the Scala code from ${tests} into ${build.tests} -->
        <scalac srcdir="${tests}" destdir="${build.tests}" target="jvm-1.5" classpathref="build.test.class.path" fork="true" jvmargs="${jvmargs} -XX:+UseConcMarkSweepGC"/>

        <!-- Compile the Scala code from ${build.generated.tests} into ${classes}. Scalac will parse any referenced .java files. -->
        <scalac srcdir="${build.generated.tests}" destdir="${build.tests}" target="jvm-1.5" classpathref="build.test.class.path" fork="true" jvmargs="${jvmargs}" />

        <!-- Compile the Java code from ${tests} into ${build.tests} -->
        <javac srcdir="${tests}" destdir="${build.tests}" classpath="${classes}:${lib}/scala-library.jar" debug="yes" />
    </target>



    <!-- Compile demo into its own directory. I.e., the class files will sit alongside the java files
       so that people can more easily look at them. All of these source files are used as demonstrations
       of something, usually described in articles on Artima.com. -->
    <target name="demo" depends="dist">
        <javac srcdir="${example}" destdir="${example}" classpath="${classes}:${lib}/junit-3.8.1.jar" debug="yes" />
    </target>

    <target name="jartests" depends="compile">
      <jar jarfile="${build.tests.jar}" basedir="${build.tests}" includes="org/scalatest/**/*.class" />
    </target>

    <target name="doc" depends="compile-main">
        <javadoc sourcepath="${src}" destdir="${jdoc}" packagenames="org.scalatest,org.scalatest.tools" classpathref="build.class.path" windowtitle="ScalaTest ${release}" doctitle="ScalaTest ${release}" bottom="Copyright (C) 2001-2009 Artima, Inc. All rights reserved." />

        <scaladoc srcref="scaladoc.source.path" destdir="${doc}" classpathref="build.class.path" windowtitle="ScalaTest ${release}" doctitle="ScalaTest ${release}" bottom="Copyright (C) 2001-2009 Artima, Inc. All rights reserved.">
            <include name="**/*.scala" />
        </scaladoc>
        <!--
      <javadoc sourcepath="${example}"
        destdir="${demodoc}"
        packagenames="com.artima.examples.*"
        classpath="${classes}:${lib}/junit-4.1.jar"
        windowtitle="ScalaTest Examples ${release}"
        doctitle="ScalaTest Examples ${release}"
        bottom="Copyright (C) 2001-2009 Artima, Inc. All rights reserved."/>
-->
    </target>

    <target name="dist" depends="compile">
        <!-- Create the distribution directory -->
        <mkdir dir="${dist}/lib" />
        <delete file="${dist}/lib/scalatest.jar" />

        <copy file="${src}/org/scalatest/ScalaTestBundle.properties" todir="${jar.contents}/org/scalatest" />
        <copy todir="${jar.contents}/images">
            <fileset dir="${src}/images" />
        </copy>

        <!-- Put everything in ${jar.contents} into the MyProject-${DSTAMP}.jar file -->
        <jar jarfile="${dist}/lib/scalatest.jar" basedir="${jar.contents}">
            <manifest>
                <attribute name="Main-Class" value="org.scalatest.tools.Runner" />
                <attribute name="Class-Path" value="junit-4.1.jar" />
            </manifest>
        </jar>
        <jar jarfile="${dist}/lib/scalatest-wbt.jar" basedir="${build.tests}" includes="org/scalatest/*.class" />

        <echo message="All finished building ${project.name}!" />
    </target>

    <target name="zipper" depends="allfiles">
        <delete dir="${zipper}" />
        <mkdir dir="${zipper}" />

        <copy file="${dist}/lib/scalatest.jar" tofile="${zipper}/scalatest-${release}/scalatest-${release}.jar" />
        <copy file="${dist}/lib/scalatest-wbt.jar" tofile="${zipper}/scalatest-${release}/scalatest-${release}-tests.jar" />

        <copy file="README.txt" tofile="${zipper}/scalatest-${release}/README.txt" />
        <copy file="LICENSE" tofile="${zipper}/scalatest-${release}/LICENSE" />
        <copy file="NOTICE" tofile="${zipper}/scalatest-${release}/NOTICE" />

        <copy todir="${zipper}/scalatest-${release}/doc">
            <fileset dir="${doc}/" />
        </copy>

        <copy todir="${zipper}/scalatest-${release}/src">
            <fileset dir="${src}/" />
        </copy>

        <copy todir="${zipper}/scalatest-${release}/tests">
            <fileset dir="${tests}/" />
        </copy>

        <!--
    <zip zipfile="${zipper}/scalatest-${release}/scalatest-${release}-src.zip" basedir="${src}"/>
    <zip zipfile="${zipper}/scalatest-${release}/scalatest-${release}-tests-src.zip" basedir="${tests}"/>
-->

        <zip zipfile="scalatest-${release}.zip" basedir="${zipper}" />
    </target>

    <target name="copyprops">
        <copy file="${src}/org/scalatest/ScalaTestBundle.properties" todir="${jar.contents}/org/scalatest" />
        <copy todir="${jar.contents}/images">
            <fileset dir="${src}/images" />
        </copy>
    </target>

    <target name="test" depends="compile,copyprops,jartests,taskdefscalatest">
        <scalatest runpath="${build.tests.jar}" concurrent="false" haltonfailure="true">
            <reporter type="graphic"/>
            <reporter type="stdout"/>
            <reporter type="file" filename="delme.txt" />
            <membersonly package="org.scalatest" />
            <membersonly package="org.scalatest.matchers" />
            <membersonly package="org.scalatest.testng" />
            <membersonly package="org.scalatest.junit" />
            <membersonly package="org.scalatest.events" />
            <membersonly package="org.scalatest.prop" />
        </scalatest>
    </target>

    <target name="coverage" depends="compile,copyprops,instrument,jartests">
        <java classname="org.scalatest.tools.Runner" classpathref="coverage.class.path" fork="true">

            <arg value="-p" />
            <arg value="${build.tests.jar} ${classes}" />

            <arg value="-g" />
            <arg value="-o" />

            <arg value="-m" />
            <arg value="org.scalatest" />

            <arg value="-m" />
            <arg value="org.scalatest.matchers" />

            <arg value="-m" />
            <arg value="org.scalatest.testng" />

            <arg value="-m" />
            <arg value="org.scalatest.junit" />

            <arg value="-m" />
            <arg value="org.scalatest.events" />

            <arg value="-m" />
            <arg value="org.scalatest.prop" />
        </java>
        <cobertura-report srcdir="${src}" destdir="${build.coverage}"/>
    </target>

    <target name="bvtest" depends="compile,copyprops,taskdefscalatest">
        <scalatest runpath="${build.tests} ${classes}" haltonfailure="true">
            <reporter type="graphic"/>
            <reporter type="stdout" config="N"/>
            <suite classname="org.scalatest.FilterSpec" />
<!--
            <suite classname="org.scalatest.SpecSpec" />
            <suite classname="org.scalatest.FunSuiteSpec" />
            <suite classname="org.scalatest.SuiteSpec" />
-->
        </scalatest>
<!--
        <scalatest runpath="${build.tests} ${classes}" haltonfailure="true">
            <reporter type="stdout" />
            <suite classname="org.scalatest.CatchReporterSuite" />
        </scalatest>
-->
    </target>

    <path id="example.class.path">
        <pathelement location="${dist}/lib/scalatest.jar" />
        <pathelement location="${classes}" />
        <pathelement location="${build.tests}" />
        <path refid="lib.path"></path>
    </path>


    <target name="testng-example" depends="dist">
        <run-example package="org.scalatest.testng.example" />
    </target>

    <target name="junit-example" depends="dist">
        <run-example package="org.scalatest.junit.example" />
    </target>

    <macrodef name="run-example">
        <attribute name="package" />
        <sequential>
            <java classname="org.scalatest.tools.Runner" classpathref="example.class.path" fork="true">

                <arg value="-p" />
                <arg value="${build.tests} ${classes}" />

                <arg value="-g" />
                <arg value="-o" />

                <arg value="-m" />
                <arg value="@{package}" />
            </java>
        </sequential>
    </macrodef>

    <target name="allfiles" depends="dist, doc, demo" />

    <target name="instrument" depends="compile">
      <taskdef classpathref="cobertura.class.path" resource="tasks.properties"/>
      <!--
        Remove the coverage data file and any old instrumentation.
      -->
      <delete file="cobertura.ser"/>
      <delete dir="${instrumented}" />

      <!--
        Instrument the application classes, writing the
        instrumented classes into ${build.instrumented.dir}.
      -->
      <cobertura-instrument todir="${instrumented}">
        <!--
          The following line causes instrument to ignore any
          source line containing a reference to log4j, for the
          purposes of coverage reporting.
        -->
        <ignore regex="org.apache.log4j.*" />

        <fileset dir="${jar.contents}">
          <include name="**/*.class" />
        </fileset>
      </cobertura-instrument>
    </target>


    <target name="ant-task-test" depends="compile,taskdefscalatest">
        <scalatest runpath="${build.tests};${classes}" haltonfailure="true">
            <runpath>
                <pathelement location="dist" />
            </runpath>
            <runpathurl url="http://foo.com/bar.jar" />

            <suite classname="org.scalatest.SuiteSuite" />
            
            <reporter type="stdout" />
            <reporter type="graphic" />
        </scalatest>
    </target>

    <target name="jar" depends="dist"></target>
</project>

